--- a/Origins EE Guide/package.json
+++ b/Origins EE Guide/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "origins-ee-guide": "file:",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
